[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/AlienShipGreen/AlienShipGreen.png" type="Texture" id=1]
[ext_resource path="res://Enemies/AlienShipGreen/AlienShipGreen.gd" type="Script" id=2]
[ext_resource path="res://Enemies/AlienShipGreen/laserGreen2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 62.2896

[sub_resource type="Animation" id=2]
resource_name = "hover"
length = 8.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -125, 20 ), Vector2( -250, 0 ), Vector2( -125, 20 ), Vector2( 0, 0 ), Vector2( 125, 20 ), Vector2( 250, 0 ), Vector2( 125, 20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 49 )

[sub_resource type="Animation" id=4]
resource_name = "emit_laser"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 0.1, 1.5 ) ]
}

[node name="AlienShipGreen" type="Node2D"]

[node name="AlienShipGreen" type="Area2D" parent="." groups=[
"enemy",
]]
position = Vector2( 216.227, 5.40371 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="AlienShipGreen"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlienShipGreen"]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AlienShipGreen"]
autoplay = "hover"
anims/hover = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="AlienShipGreen"]
enabled = true
cast_to = Vector2( 0, 200 )

[node name="LaserBeam" type="Area2D" parent="AlienShipGreen"]
visible = false
position = Vector2( 0, -33 )
scale = Vector2( 0.1, 1.5 )
z_index = 1
collision_layer = 2

[node name="Sprite" type="Sprite" parent="AlienShipGreen/LaserBeam"]
position = Vector2( 1, 108 )
z_index = -1
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlienShipGreen/LaserBeam"]
position = Vector2( 0, 109 )
shape = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="AlienShipGreen/LaserBeam"]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AlienShipGreen/LaserBeam"]
autoplay = "emit_laser"
anims/emit_laser = SubResource( 4 )

[connection signal="body_entered" from="AlienShipGreen" to="AlienShipGreen" method="_on_AlienShipGreen_body_entered"]
[connection signal="timeout" from="AlienShipGreen/LaserBeam/Cooldown" to="AlienShipGreen" method="_on_Cooldown_timeout"]
